added i2c files and multicore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,8 @@
     "raspberry-pi-pico.python3Path": "${HOME}/.pico-sdk/python/3.12.1/python.exe",
     "files.associations": {
         "i2c.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "stdlib.h": "c",
+        "binary_info.h": "c"
     }
 }
