--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "i2c.h": "c",
         "stdio.h": "c",
         "stdlib.h": "c",
-        "binary_info.h": "c"
+        "binary_info.h": "c",
+        "multicore.h": "c"
     }
 }
