--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ pico_sdk_init()
 add_executable(PicoI2CTest PicoI2CTest.c 
 i2c.cpp
 led.cpp
+asm.cpp
 )
 
 pico_set_program_name(PicoI2CTest "PicoI2CTest")
