--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,50 +24,52 @@ if (EXISTS ${picoVscode})
 endif()
 # ====================================================================================
 set(PICO_BOARD pico CACHE STRING "Board type")
+set(PROJECT PicoI2CTest)
 
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(PicoI2CTest C CXX ASM)
+project(${PROJECT} C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(PicoI2CTest PicoI2CTest.c 
+add_executable(${PROJECT} 
+main.cpp 
 i2c.cpp
 led.cpp
 asm.cpp
 shared_buf.cpp
 )
 
-pico_set_program_name(PicoI2CTest "PicoI2CTest")
-pico_set_program_version(PicoI2CTest "0.1")
+pico_set_program_name(${PROJECT} "PicoI2CTest")
+pico_set_program_version(${PROJECT} "0.1")
 
 # Generate PIO header
-pico_generate_pio_header(PicoI2CTest ${CMAKE_CURRENT_LIST_DIR}/blink.pio)
+pico_generate_pio_header(${PROJECT} ${CMAKE_CURRENT_LIST_DIR}/blink.pio)
 
 # Modify the below lines to enable/disable output over UART/USB
-#pico_enable_stdio_uart(PicoI2CTest 0)
-pico_enable_stdio_usb(PicoI2CTest 1)
+#pico_enable_stdio_uart(${PROJECT} 0)
+pico_enable_stdio_usb(${PROJECT} 1)
 
 # Add the standard library to the build
-target_link_libraries(PicoI2CTest
+target_link_libraries(${PROJECT}
         pico_stdlib)
 
 # Add the standard include files to the build
-target_include_directories(PicoI2CTest PRIVATE
+target_include_directories(${PROJECT} PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}
   ${CMAKE_CURRENT_LIST_DIR}/.. # for our common lwipopts or any other standard includes, if required
 )
 
 # Add any user requested libraries
-target_link_libraries(PicoI2CTest 
+target_link_libraries(${PROJECT} 
         hardware_i2c
         hardware_pio
         pico_multicore
         )
 
-pico_add_extra_outputs(PicoI2CTest)
+pico_add_extra_outputs(${PROJECT})
 
